package com.example.task4;

public interface Iterator {
    boolean hasNext();
    Object next();
    Object preview();
}